footer changes made

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
                 </div>
             </div>
             <script src="app.js"></script>
+            <div class="footer bg-white">
+              <a href="https://github.com/srisathyamamidala/proposal">proposal</a>
+              <a href="https://github.com/srisathyamamidala/habitreminder">source code</a>
+              <a href="https://github.com/srisathyamamidala/habitreminder/projects/1">project board</a>
+            </div>
         </body>
         
     
