added styles and updated index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             </div>
             <script src="app.js"></script>
             <div class="footer bg-white">
-              <a href="https://github.com/srisathyamamidala/proposal">proposal</a>
+              <p>Copyright 2021-2022. All Rights Reserved.</p>
+              <a href="https://github.com/srisathyamamidala/proposal">proposal6B</a>
               <a href="https://github.com/srisathyamamidala/habitreminder">source code</a>
               <a href="https://github.com/srisathyamamidala/habitreminder/projects/1">project board</a>
             </div>
