added logo to home,login pages

--- a/home.html
+++ b/home.html
@@ -9,12 +9,21 @@
         <title>
             Habit Reminder
         </title>
+        <style>
+          .logo,img{
+            width: 110px;
+            height: 110px;
+          }
+        </style>
         <script src="https://kit.fontawesome.com/363d4672c2.js"></script>
 
         <link rel="stylesheet" href="stylee.css">
         </head>
         <body>
             <nav class="navbar navbar-expand-sm bg-light">
+              <div class="logo">
+                <img src="images/nwmsubearcat.jpg">
+              </div>
                 <div class="container-fluid">
                   <ul class="navbar-nav">
                     <li class="nav-item">
