--- a/Login.html
+++ b/Login.html
@@ -13,9 +13,18 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
         
         <link rel="stylesheet" href="stylee.css">
+        <style>
+          .logo,img{
+            width: 110px;
+            height: 110px;
+          }
+        </style>
         </head>
         <body>
             <nav class="navbar navbar-expand-sm bg-light">
+              <div class="logo">
+                <img src="images/nwmsubearcat.jpg">
+              </div>
                 <div class="container-fluid">
                   <ul class="navbar-nav">
                     <li class="nav-item">
