added background and changed the style of the pages

--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
               <a href="https://github.com/srisathyamamidala/proposal">proposal6B</a>
               <a href="https://github.com/srisathyamamidala/habitreminder">source code</a>
               <a href="https://github.com/srisathyamamidala/habitreminder/projects/1">project board</a>
+              <style>
+                 .footer bg-white{
+                 text-align: center;
+                 padding: 10px;
+                 background-color: rgb(240, 241, 146);
+                 }
+              </style>
             </div>
         </body>
         
