--- a/home.html
+++ b/home.html
@@ -24,6 +24,7 @@
               <div class="logo">
                 <img src="images/nwmsubearcat.jpg">
               </div>
+             
                 <div class="container-fluid">
                   <ul class="navbar-nav">
                     <li class="nav-item">
@@ -50,7 +51,7 @@
                 </div>
             </div>
             <script src="app.js"></script>
-            <div class="footer bg-white">
+            <div class="footer-bgwhite">
               <p>Copyright 2021-2022. All Rights Reserved.</p>
               <a href="https://github.com/srisathyamamidala/proposal">proposal6B</a>
               <a href="https://github.com/srisathyamamidala/habitreminder">source code</a>
