changed the header background color

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="stylee.css">
         </head>
         <body>
-            <nav class="navbar navbar-expand-sm bg-light">
+            <nav class="navbar navbar-expand-sm bg-success">
               <div class="logo">
                 <img src="images/nwmsubearcat.jpg">
               </div>
@@ -53,8 +53,8 @@
             <script src="app.js"></script>
             <div class="footer-bgwhite">
               <p>Copyright 2021-2022. All Rights Reserved.</p>
-              <a href="https://github.com/srisathyamamidala/proposal">proposal6B</a>
-              <a href="https://github.com/srisathyamamidala/habitreminder">source code</a>
+              <a href="https://github.com/srisathyamamidala/proposal">proposal6B</a>&nbsp;&nbsp;&nbsp;
+              <a href="https://github.com/srisathyamamidala/habitreminder">source code</a>&nbsp;&nbsp;&nbsp;
               <a href="https://github.com/srisathyamamidala/habitreminder/projects/1">project board</a>
             </div>
         </body>
