--- a/Login.html
+++ b/Login.html
@@ -21,7 +21,7 @@
         </style>
         </head>
         <body>
-            <nav class="navbar navbar-expand-sm bg-light">
+            <nav class="navbar navbar-expand-sm bg-success">
               <div class="logo">
                 <img src="images/nwmsubearcat.jpg">
               </div>
@@ -62,10 +62,10 @@
                 
             </div>
             <script src="app.js"></script>
-            <div class="footer bg-white">
+            <div class="footer-2">
               <p>Copyright 2021-2022. All Rights Reserved.</p>
-              <a href="https://github.com/srisathyamamidala/proposal">proposal6B</a>
-              <a href="https://github.com/srisathyamamidala/habitreminder">source code</a>
+              <a href="https://github.com/srisathyamamidala/proposal">proposal6B</a>&nbsp;&nbsp;&nbsp;
+              <a href="https://github.com/srisathyamamidala/habitreminder">source code</a>&nbsp;&nbsp;&nbsp;
               <a href="https://github.com/srisathyamamidala/habitreminder/projects/1">project board</a>
             </div>
         </body>
