Added the 6B favicon .

--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
         <title>
             Habit Reminder
         </title>
+        <link rel = "shortcut icon" href = "images/favicon_io (6)/">
         <style>
           .logo,img{
             width: 110px;
