--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
         <title>
-            Habit Reminder
+            6B Habit Reminder
         </title>
         <style>
           .logo,img{
