--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-      <head>
-        <title>To Do List</title>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins.wght@400;500&display=swap"
-        rel="stylesheet">
-    
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-        <link rel="stylesheet"href="stylee.css">
-    </head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=devide-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+        <title>
+            6B Habit Reminder
+        </title>
+        <link rel = "shortcut icon" href = "images/favicon_io (6)/">
+
         <style>
           .logo,img{
             width: 110px;
             height: 110px;
           }
         </style>
+         <script src="https://kit.fontawesome.com/363d4672c2.js"></script>
+
+         <link rel="stylesheet" href="stylee.css">
         </head>
         <body>
             <nav class="navbar navbar-expand-sm bg-success">
@@ -36,7 +41,7 @@
                 </div>
               </nav>
             <div class="wrapper">
-                <header>Habit Reminder App</header>
+                
                 <div class="container">
                   <div id="newtask">
                       <input type="text" placeholder="Task to be done..">
