--- a/Login.html
+++ b/Login.html
@@ -11,6 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
         
         <link rel="stylesheet" href="stylee.css">
         <style>
@@ -20,7 +21,7 @@
           }
         </style>
         </head>
-        <body>
+        <body ng-app="myApp" ng-controller="myCtrl">
             <nav class="navbar navbar-expand-sm bg-success">
               <div class="logo">
                 <img src="images/nwmsubearcat.jpg">
