changed email to username

--- a/Login.html
+++ b/Login.html
@@ -49,8 +49,8 @@
                 <header>Login</header>
                 <form method="POST" action="#">
                     <div class="mb-3 mt-3">
-                      <label for="email">Email:</label>
-                      <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+                      <label for="username">username:</label>
+                      <input type="username" class="form-control" id="username" placeholder="Enter username" name="username">
                     </div>
                     <div class="mb-3">
                       <label for="pwd">Password:</label>
