--- a/a.html
+++ b/a.html
@@ -20,14 +20,13 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyBKzv9PlQESIiA1eJoH9p4sLhkMBAdIeGE",
-    authDomain: "habit-reminder-f7fd7.firebaseapp.com",
-    databaseURL: "https://habit-reminder-f7fd7-default-rtdb.firebaseio.com",
-    projectId: "habit-reminder-f7fd7",
-    storageBucket: "habit-reminder-f7fd7.appspot.com",
-    messagingSenderId: "502767252044",
-    appId: "1:502767252044:web:715e5833dbe650839ffae9",
-    measurementId: "G-LX376GXF84"
+    apiKey: "AIzaSyB0O_LnnmjsB4Ucni2a6Qw9ToxP4ikTFSA",
+    authDomain: "habitreminder-d891d.firebaseapp.com",
+    projectId: "habitreminder-d891d",
+    storageBucket: "habitreminder-d891d.appspot.com",
+    messagingSenderId: "1997366263",
+    appId: "1:1997366263:web:418c0a8b1b494ecb0704f2",
+    measurementId: "G-KTF0VDC0NV"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
