sign up page added

--- a/signup.html
+++ b/signup.html
@@ -34,6 +34,10 @@
                       <a class="nav-link" href="./Login.html">Login</a>
                     </li>
                     <li class="nav-item">
+                      <a class="nav-link" href="./signup.html">Sign up</a>
+                    </li>
+
+                    <li class="nav-item">
                       <a class="nav-link" href="./index.html">Add New Habit</a>
                     </li>
                     
