--- a/home.html
+++ b/home.html
@@ -34,6 +34,9 @@
                     <li class="nav-item">
                       <a class="nav-link" href="./Login.html">Login</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./signup.html">Sign up</a>
+                    </li>
                     
                     <li class="nav-item">
                       <a class="nav-link" href="./index.html">Add New Habbit</a>
