changed from login to sign up in the signup.html

--- a/signup.html
+++ b/signup.html
@@ -45,7 +45,7 @@
                 </div>
               </nav>
             <div class="wrapper">
-                <header>Login</header>
+                <header>Sign up</header>
 				    <p id="dis" style="color: lightgreen;font-weight: 30px; visibility: hidden;">User registered successfully.</p>
      <form class="contact-form">
 	  <div class="mb-3 mt-3">
